<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:src="@drawable/signup_txt_img" />

    <EditText
        android:id="@+id/sign_up_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="162dp"
        android:background="@drawable/name"
        android:fontFamily="@font/montserrat"
        android:hint="@string/name"
        android:paddingLeft="70dp"
        android:textColor="@color/dark_yellow"
        android:textColorHint="@color/faded_yellow"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="222dp"
        android:background="@drawable/email"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="70dp"
        android:textColor="@color/dark_yellow"
        android:textColorHint="@color/faded_yellow"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sign_up_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="282dp"
        android:background="@drawable/age"
        android:fontFamily="@font/montserrat"
        android:hint="@string/age"
        android:inputType="number"
        android:paddingLeft="70dp"
        android:textColor="@color/dark_yellow"
        android:textColorHint="@color/faded_yellow"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sign_up_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="342dp"
        android:background="@drawable/password"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="70dp"
        android:textColor="@color/dark_yellow"
        android:textColorHint="@color/faded_yellow"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="407dp"
        android:src="@drawable/sign_up_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="453dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/already_member"
        android:textColor="@color/dark_yellow"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/signup_to_login_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="252dp"
        android:layout_marginTop="453dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/login"
        android:textColor="@color/dark_yellow"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/signup_bg"
        android:layout_width="439dp"
        android:layout_height="418dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="472dp"
        android:src="@drawable/owl_2" />

    <ProgressBar
        android:id="@+id/progress_bar_signup"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>