<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_pg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <!--TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="Inside Login"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_txt_img"
        android:layout_marginTop="96dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/email"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="70dp"
        android:textColor="@color/dark_yellow"
        android:textColorHint="@color/faded_yellow"
        android:textStyle="bold"
        android:layout_marginTop="162dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="532dp"
        android:background="@drawable/password"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="70dp"
        android:textColor="@color/dark_yellow"
        android:textColorHint="@color/faded_yellow"
        android:textStyle="bold"
        android:layout_marginTop="222dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/forgot_pass"
        android:textColor="@color/dark_yellow"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="282dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="307dp"/>

    <TextView
        android:id="@+id/login_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/dont_have_accout"
        android:textColor="@color/dark_yellow"
        android:textSize="12sp"
        android:layout_marginTop="353dp"
        android:layout_marginLeft="120dp"/>

    <TextView
        android:id="@+id/sign_up_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/signup"
        android:textColor="@color/dark_yellow"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginLeft="252dp"
        android:layout_marginTop="353dp"/>

    <ImageView
        android:id="@+id/login_bg"
        android:layout_width="460dp"
        android:layout_height="509dp"
        android:src="@drawable/login_img"
        android:layout_marginTop="429dp"
        android:layout_marginLeft="-60dp"/>

    <ProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>