<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/combo_icon" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="111dp"
        android:src="@drawable/profile_pic" />

    <!--de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:src="@drawable/profile_pic"
        app:civ_border_color="@color/gray"
        app:civ_border_width="2dp"/-->

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="247dp"
        android:background="@drawable/profile_name"
        android:fontFamily="@font/montserrat"
        android:hint="@string/name"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:text="@string/loading"
        android:textColor="@color/dark_yellow"
        android:textColorHint="@color/faded_yellow"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="295dp"
        android:background="@drawable/profile_name"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:text="@string/loading"
        android:textColor="@color/dark_yellow"
        android:textColorHint="@color/faded_yellow"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/profile_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="342dp"
        android:background="@drawable/profile_name"
        android:fontFamily="@font/montserrat"
        android:hint="@string/age"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:text="@string/loading"
        android:textColor="@color/dark_yellow"
        android:textColorHint="@color/faded_yellow"
        android:textStyle="bold" />

    <!--EditText
        android:id="@+id/profile_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/profile_name"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:text="@string/demon_password"
        android:textColor="@color/dark_yellow"
        android:textColorHint="@color/faded_yellow"
        android:textStyle="bold" /-->

    <ImageView
        android:id="@+id/profile_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="395dp"
        android:paddingLeft="10dp"
        android:src="@drawable/dots" />

    <ImageView
        android:id="@+id/profile_password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="308dp"
        android:layout_marginTop="390dp"
        android:src="@drawable/edit_pen_2"
        />

    <ImageView
        android:id="@+id/profile_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="452dp"
        android:src="@drawable/save_button" />

    <ImageView
        android:id="@+id/profile_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="500dp"
        android:src="@drawable/profile_bg" />

    <ProgressBar
        android:id="@+id/progress_bar_profile"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>